Closed
Bug 1400668
Opened 8 years ago
Closed 8 years ago
Process key handle exclusion list when registering a token
Categories
(Core :: DOM: Device Interfaces, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla58
People
(Reporter: ttaubert, Assigned: ttaubert)
References
(Blocks 1 open bug)
Details
(Whiteboard: [webauthn])
Attachments
(1 file)
|
44 bytes,
text/x-phabricator-request
|
jcj
:
review+
Sylvestre
:
approval-mozilla-beta+
|
Details | Review |
It's all there, we just need to forward the exclusion list and make the proper queries in the Rust lib.
Updated•8 years ago
|
Priority: -- → P2
Comment 1•8 years ago
|
||
Comment on attachment 8909105 [details]
Bug 1400668 - Process key handle exclusion list when registering a token r=jcj
J.C. Jones [:jcj] has approved the revision.
https://phabricator.services.mozilla.com/D64#1410
Attachment #8909105 -
Flags: review+
Pushed by ttaubert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e907fa0c6d37
Process key handle exclusion list when registering a token r=jcj
Pushed by ttaubert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e4294dd8b8c9
Fix Android builds on a CLOSED TREE by adding the key_handles arg to the stub PlatformManager r=bustage
Comment 4•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/e907fa0c6d37
https://hg.mozilla.org/mozilla-central/rev/e4294dd8b8c9
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox58:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
| Assignee | ||
Comment 5•8 years ago
|
||
Comment on attachment 8909105 [details]
Bug 1400668 - Process key handle exclusion list when registering a token r=jcj
Approval Request Comment
[Feature/Bug causing the regression]: No regression, missing feature.
[User impact if declined]: Might break testing the U2F/WebAuthn API.
[Is this code covered by automated tests?]: No.
[Has the fix been verified in Nightly?]: Manually, yes.
[Needs manual test from QE? If yes, steps to reproduce]:
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: Not risky.
[Why is the change risky/not risky?]: U2F/WebAuthn are not enabled by default.
[String changes made/needed]: None.
This is not critical but it would be nice to have if folks are going to test U2F/WebAuthn in Firefox 57. It's disabled by default but can be enabled via a pref. Low risk because it only touches dom/webauthn.
Attachment #8909105 -
Flags: approval-mozilla-beta?
Updated•8 years ago
|
status-firefox57:
--- → affected
Comment 6•8 years ago
|
||
Comment on attachment 8909105 [details]
Bug 1400668 - Process key handle exclusion list when registering a token r=jcj
Happy to help if this remains disabled in 57.
Should be in 57b3
Attachment #8909105 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•8 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•