Bug 1400668 - Process key handle exclusion list when registering a token. r=jcj, a=sledru